test/syntax/invalid/malformed-optional-chain.ts
// expect: VZG2002
value?.;
